# RADJAX-Student

./: README.md  bible.md  phase1_acceptance_receipt.json  pyproject.toml  runtime_phase2_acceptance_receipt.json
docs/: ARCHITECTURE.md  ARCHITECTURE_CHARTER.md  CLI.md  DESIGN_PHILOSOPHY.md  FOUNDATION_AUDIT_CLOSURE.md  FOUNDATION_AUDIT_CLOSURE_REPORT.json  IMPORT_BOUNDARIES.md  INDEX.md  P1_10_PHASE1_ACCEPTANCE_GATE.md  P1_3_PRODUCTION_TOME_GAP_REPORT.md  P1_4_PRODUCTION_TOME_ALIGNMENT_PLAN.md  P1_6_STUDENT_ARTIFACT_VIEW.md  P1_7_STUDENT_RUN_DEFAULTS.md  P1_8_STUDENT_COMPATIBILITY_REPORT.md  P2_10_RUNTIME_ACCEPTANCE_GATE.md  P2_1_RUNTIME_CONTRACT.md  P2_2_DEVICE_ENVIRONMENT_INSPECTION.md  P2_3_RUNTIME_BACKEND_REGISTRY.md  P2_4_SINGLE_DEVICE_CPU_RUNTIME_SMOKE.md  P2_5_RNG_AND_REPRODUCIBILITY.md  P2_6_PLACEMENT_AND_SHARDING_INTENT.md  P2_7_COMPILATION_AND_EXECUTION_BOUNDARY.md  P2_8_RUNTIME_STATE_SAVE_RESTORE.md  P2_9_GPU_TPU_PORTABILITY_SMOKE.md  P3_10_LEARNING_CORE_GOLDEN_ACCEPTANCE.md  P3_11_10_FINAL_ADVERSARIAL_GATE.md  P3_11_10_FINAL_ADVERSARIAL_GATE_RECEIPT.json  P3_11_1_SHARED_CONTRACTS_DECISION.md  P3_11_2_ARCHITECTURE_IDENTITY.md  P3_11_3_PARAMETER_LAYOUT_AND_SCOPE_ROUTING.md  P3_11_4_JAX_OPTIMIZER_CAPABILITY.md  P3_11_5_COMPLETE_RUNTIME_JAX_STEP.md  P3_11_6A_INTEGRATION_REPAIR.md  P3_11_6_RUNTIME_JAX_BRIDGE.md  P3_11_7_CHECKPOINT_V3.md  P3_11_8_STATEFUL_SYSTEMS_PROOF.md  P3_11_8_STATEFUL_SYSTEMS_RECEIPT.json  P3_11_8_SYSTEMS_PROOF.md  P3_11_9_DETERMINISTIC_REPLAY.md  P3_11_9_REPLAY_EVIDENCE.json  (+54 more)
scripts/: audit_architecture.py  train_student.py
(+312 files in other folders)
