[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radjax-student"
version = "0.1.0"
description = "Student-side RADJAX training and evaluation scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "radjax-contract @ git+https://github.com/nova-rey/RADJAX-Contract.git@ff8f6e9af976fc599ee31173d4f177fb1250b4d7",
]

[project.scripts]
radjax-student = "radjax_student.cli.main:main"

[project.optional-dependencies]
jax = [
  "jax[cpu]>=0.4.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
test-jax = [
  "pytest>=8.0",
  "ruff>=0.6",
  "jax[cpu]==0.4.38",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["jax: requires the optional JAX CPU test extra"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
